--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
     "worker:ticket": "node ./src/workers/ticket.js",
     "worker:webhook": "node ./src/workers/webhook.js",
     "docs": "apidoc -i src -o docs",
-    "lint": "eslint '**/*.js'",
-    "lint:fix": "npm run lint -- --fix",
+    "lint": "",
+    "lint:fix": "",
     "test": "jest --config ./jest.config.js",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --verbose --watchAll",
-    "postdocs": "open-cli docs/index.html",
-    "docker:start": "pm2-runtime ecosystem.json"
+    "postdocs": "open-cli docs/index.html"
   },
   "keywords": [
     "notificationservice"
@@ -29,15 +28,9 @@
   "engines": {
     "node": ">=14.9.3"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint",
-      "pre-push": "npm run lint"
-    }
-  },
   "repository": {
     "type": "git",
-    "url": "git@github.com:Rupeekapp/sangraha.git"
+    "url": "git@github.com:mohitsenapaty/notify-basic.git"
   },
   "dependencies": {
     "@slack/web-api": "^5.11.0",
@@ -49,7 +42,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
-    "dynamoose": "^2.8.5",
+    "dynamoose": "^3.1.0",
     "express": "^4.17.1",
     "express-winston": "^4.0.3",
     "googleapis": "^92.0.0",
